[package]
name = "esma_downloader"
version = "0.1.0"
edition = "2021"
authors = ["Fernando G. Testa <fernando.testa@equiduct.com>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
calamine = { version = "0.22" }
chrono = { version = "0.4.30" }
oracle = { version  = "0.5", features = ["chrono"] }
